--- a/src/solution/CMakeLists.txt
+++ b/src/solution/CMakeLists.txt
@@ -8,7 +8,13 @@ SET( executable   polymerX )
 INCLUDE_DIRECTORIES   ("${PROJECT_SOURCE_DIR}/polymer")
 
 ADD_EXECUTABLE(        ${executable} ${MAINSRC} )
-TARGET_LINK_LIBRARIES( ${executable} polymer )
+if(OpenMP_CXX_FOUND)
+    target_link_libraries(${executable} PUBLIC polymer OpenMP::OpenMP_CXX)
+    message("CMAKE: COMPILING WITH OPENMP")
+else()
+    target_link_libraries(${executable} polymer) 
+endif()
+
 
 
 
