--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 # Literature files  #
 #####################
 
-.pdf
+*.pdf
 
 # Doconce Stuff     #
 #####################
@@ -58,6 +58,7 @@ gmon.out
 .Trashes
 ehthumbs.db
 Thumbs.db
+#*#
 
 # VS generated files #
 ######################
