small changes to cmake

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,10 @@ build_win/
 *.gp~
 *.html
 
+#   data directory #
+####################
+data/
+
 # image files       #
 #####################
 *.png
